@@ -1,7 +1,7 @@
 Package: Momocs
 Title: Morphometrics using R
-Version: 1.1.5
-Date: 2016-11-30
+Version: 1.1.6
+Date: 2017-04-17
 Authors@R: c( person("Vincent", "Bonhomme", ,
        "bonhomme.vincent@gmail.com", c("aut", "cre")),
        person("Julien", "Claude", , , c("aut")) )
