@@ -89,6 +89,8 @@ S3method(coo_bookstein,Ldk)
 S3method(coo_bookstein,Opn)
 S3method(coo_bookstein,Out)
 S3method(coo_bookstein,default)
+S3method(coo_centdist,Coo)
+S3method(coo_centdist,default)
 S3method(coo_center,Coo)
 S3method(coo_center,default)
 S3method(coo_centpos,Coo)
@@ -697,6 +699,7 @@ importFrom(stats,cov.wt)
 importFrom(stats,df)
 importFrom(stats,dist)
 importFrom(stats,dnorm)
+importFrom(stats,fft)
 importFrom(stats,hclust)
 importFrom(stats,kmeans)
 importFrom(stats,lm)
