@@ -15,9 +15,10 @@ PI: Glynis Jones, Dept of Archaeology, Sheffield, UK. Data collected by Emily Fo
 Data: Landmark and semilandmark coordinates on cereal glumes
 }
 \seealso{
-Other datasets: \code{\link{bot}}, \code{\link{charring}},
-  \code{\link{flower}}, \code{\link{hearts}},
-  \code{\link{molars}}, \code{\link{mosquito}},
+Other datasets: \code{\link{apodemus}}, \code{\link{bot}},
+  \code{\link{charring}}, \code{\link{flower}},
+  \code{\link{hearts}}, \code{\link{molars}},
+  \code{\link{mosquito}}, \code{\link{mouse}},
   \code{\link{oak}}, \code{\link{olea}},
   \code{\link{shapes}}, \code{\link{trilo}},
   \code{\link{wings}}
