@@ -14,9 +14,10 @@ see link{iris}
 Data: Measurement of iris flowers
 }
 \seealso{
-Other datasets: \code{\link{bot}}, \code{\link{chaff}},
-  \code{\link{charring}}, \code{\link{hearts}},
-  \code{\link{molars}}, \code{\link{mosquito}},
+Other datasets: \code{\link{apodemus}}, \code{\link{bot}},
+  \code{\link{chaff}}, \code{\link{charring}},
+  \code{\link{hearts}}, \code{\link{molars}},
+  \code{\link{mosquito}}, \code{\link{mouse}},
   \code{\link{oak}}, \code{\link{olea}},
   \code{\link{shapes}}, \code{\link{trilo}},
   \code{\link{wings}}
