@@ -15,9 +15,10 @@ and downsampled to 80 coordinates per outline.
 Data: Outline coordinates of hand-drawn hearts
 }
 \seealso{
-Other datasets: \code{\link{bot}}, \code{\link{chaff}},
-  \code{\link{charring}}, \code{\link{flower}},
-  \code{\link{molars}}, \code{\link{mosquito}},
+Other datasets: \code{\link{apodemus}}, \code{\link{bot}},
+  \code{\link{chaff}}, \code{\link{charring}},
+  \code{\link{flower}}, \code{\link{molars}},
+  \code{\link{mosquito}}, \code{\link{mouse}},
   \code{\link{oak}}, \code{\link{olea}},
   \code{\link{shapes}}, \code{\link{trilo}},
   \code{\link{wings}}
