@@ -15,9 +15,10 @@ Arranged from: \url{http://life.bio.sunysb.edu/morph/data/RohlfArchieWingOutline
 Data: Outline coordinates of mosquito wings.
 }
 \seealso{
-Other datasets: \code{\link{bot}}, \code{\link{chaff}},
-  \code{\link{charring}}, \code{\link{flower}},
-  \code{\link{hearts}}, \code{\link{molars}},
+Other datasets: \code{\link{apodemus}}, \code{\link{bot}},
+  \code{\link{chaff}}, \code{\link{charring}},
+  \code{\link{flower}}, \code{\link{hearts}},
+  \code{\link{molars}}, \code{\link{mouse}},
   \code{\link{oak}}, \code{\link{olea}},
   \code{\link{shapes}}, \code{\link{trilo}},
   \code{\link{wings}}
