@@ -12,10 +12,11 @@ Rohlf and Slice 1990 and \url{http://life.bio.sunysb.edu/morph/data/RohlfSlice19
 Data: Landmarks coordinates of mosquito wings
 }
 \seealso{
-Other datasets: \code{\link{bot}}, \code{\link{chaff}},
-  \code{\link{charring}}, \code{\link{flower}},
-  \code{\link{hearts}}, \code{\link{molars}},
-  \code{\link{mosquito}}, \code{\link{oak}},
+Other datasets: \code{\link{apodemus}}, \code{\link{bot}},
+  \code{\link{chaff}}, \code{\link{charring}},
+  \code{\link{flower}}, \code{\link{hearts}},
+  \code{\link{molars}}, \code{\link{mosquito}},
+  \code{\link{mouse}}, \code{\link{oak}},
   \code{\link{olea}}, \code{\link{shapes}},
   \code{\link{trilo}}
 }
